--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(wrapper)
 add_compile_options(-std=c++14 -Werror=return-type -Wall)
 
 ## Adding DEBUG_MODE for Connector::util.h
-OPTION(DEBUG_MODE "Enables the DEBUG messages and -O0 flags" 1) 
+#OPTION(DEBUG_MODE "Enables the DEBUG messages and -O0 flags" 1)
 
 if(DEBUG_MODE)
     message("DEBUG_MODE is ON")
@@ -13,20 +13,8 @@ else()
     add_definitions(-DDEBUG_MODE=0)
 endif()
 
-set(DEBUG 1)
-#set(GPU 1)
-set(PYLON 1)
+set(PYLON 0)
 set(CUDNN 0)
-set(VISIONWORKS 1)
-
-#set (CMAKE_BUILD_TYPE  DEBUG)
-
-# Setting CUDA this way breaks because of `error: template with C linkage`
-# 
-#if(GPU)
-#	find_package(CUDA REQUIRED)
-#	add_definitions(-DGPU=1)
-#endif()
 
 if(CUDNN)
     list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
@@ -34,75 +22,12 @@ if(CUDNN)
     add_definitions(-DCUDNN=1)
 endif()
 
-if(PYLON)
-    list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake/Modules")
-    find_package(Pylon REQUIRED)
-endif()
-
-if(VISIONWORKS)
-    list(APPEND CMAKE_MODULE_PATH "/usr/share/visionworks-tracking/cmake")
-    find_package(VisionWorks REQUIRED)
-    #[[find_package(VisionWorks-Tracking REQUIRED)
-    message(STATUS "==> VISIONWORKS-TRACKING " ${VisionWorks-Tracking_INCLUDE_DIRS})
-    message(STATUS "==> VISIONWORKS-TRACKING " ${VisionWorks-Tracking_LIBRARIES})]]
-endif()
-
 find_package(BLAS)
 find_library(DARKNET darknet)
-
-if(DARKNET_FOUND)
-    message(STATUS "==> DARKNET found")
-    else()
-    message(STATUS "==> DARKNET not found")
-endif()
-
-# debug information
-if(DEBUG)
-
-	if(OpenCV_FOUND)
-		message(STATUS "==> OPENCV found")
-	else()
-		message(STATUS "==> OPENCV not found")
-	endif()
-	
-	if(CUDA_FOUND)
-        message(STATUS "==> CUDA found")
-    else()
-        message(STATUS "==> CUDA not found")
-    endif()
-
-    if(CUDNN_FOUND)
-        message(STATUS "==> CUDNN found")
-    else()
-        message(STATUS "==> CUDNN not found")
-    endif()
-
-    if(Pylon_FOUND)
-        message(STATUS "==> PYLON found")
-    else()
-        message(STATUS "==> PYLON not found")
-    endif()
-
-    #message(STATUS "==> COMMON_FLAGS " ${COMMON_FLAGS})
-    #message(STATUS "==> CMAKE_C_FLAGS: " ${CMAKE_C_FLAGS})
-    #message(STATUS "==> CMAKE_CXX_FLAGS: " ${CMAKE_CXX_FLAGS})
-    message(STATUS "==> CUDA_NVCC_FLAGS: " ${CUDA_NVCC_FLAGS})
-    message(STATUS "==> CUDA_curand_LIBRARY: " ${CUDA_curand_LIBRARY})
-    message(STATUS "==> CUDA_LIBRARIES: " ${CUDA_LIBRARIES})
-    message(STATUS "==> CUDA_CUBLAS_LIBRARIES: " ${CUDA_CUBLAS_LIBRARIES})
-    message(STATUS "==> CUDA_curand_LIBRARY: " ${CUDA_curand_LIBRARY})
-    message(STATUS "==> CUDA_INCLUDE_DIRS: " ${CUDA_INCLUDE_DIRS})
-    message(STATUS "==> CUDNN_INCLUDE_DIRS: " ${CUDNN_INCLUDE_DIRS})
-    message(STATUS "==> CUDNN_LIBRARIES: " ${CUDNN_LIBRARIES})
-    message(STATUS "==> PYLON_LIBRARIES: " ${PYLON_INCLUDE_DIRS})
-    message(STATUS "==> PYLON_LIBRARIES: " ${PYLON_LIBRARIES})
-
-endif()
-
-find_package(OpenCV REQUIRED)
+set(OpenCV_DIR "/usr/share/OpenCV/")
+find_package(OpenCV 3.1.0 NO_DEFAULT_PATH REQUIRED)
 find_package(Threads)
 find_package(Boost COMPONENTS program_options REQUIRED)
-find_package(connector 1.0 REQUIRED)
 find_package(OpenGL REQUIRED)
 find_package(X11 REQUIRED)
 find_package(glfw3 REQUIRED)
@@ -123,6 +48,7 @@ include_directories(
     ${OpenGL_INLCUDE_DIR}
     eigen3
     src
+    src/wrapper
     nvxio/include
     nvx/tracking
     nvx
@@ -134,35 +60,14 @@ link_directories(
     /usr/local/cuda/lib64
     libs
     src
-)
-
-add_executable(darknet-run
-    src/basler-demo.cpp
-    src/yolo_v2_class.hpp
-    src/object.h  
+    src/wrapper
 )
 
 add_executable(darknet-debug
-    src/darknet-debug.cpp
-    src/detector-wrapper.hpp
-    src/object.h  
-)
-
-#add_executable(tracker
-#    vision-works/main_object_tracker.cpp)
-
-target_link_libraries(darknet-run 
-    ${OpenCV_LIBS}
-    ${PYLON_LIBRARIES} 
-    ${CUDNN_LIBRARIES}
-    ${CMAKE_THREAD_LIBS_INIT}
-    ${Boost_LIBRARIES}
-    darknet
-    cuda 
-    cudart 
-    cublas 
-    curand
-)
+    src/wrapper/darknet-debug.cpp
+    src/wrapper/detector-wrapper.hpp
+    src/wrapper/object.h
+    src/kalman/kalman_filter.cpp src/kalman/kalman_filter.h)
 
 target_link_libraries(darknet-debug
     ${OpenCV_LIBS}
@@ -176,25 +81,3 @@ target_link_libraries(darknet-debug
     cublas 
     curand
 )
-
-#target_link_libraries(tracker
-#    ${OpenCV_LIBS}
-#    ${PYLON_LIBRARIES} 
-#    ${CUDNN_LIBRARIES}
-#    ${Boost_LIBRARIES}
-#    ${VisionWorks_LIBRARIES} 
-#    ovx
-#    nvx
-#    ${GST_LIBRARIES}
-#    visionworks_tracking.so
-#    glfw
-#    ${X11_LIBRARIES}
-#   ${OPENGL_LIBRARIES}
-#    ${FREETYPE_LIBRARIES}
-#    ${CMAKE_THREAD_LIBS_INIT}
-#    darknet
-#    cuda 
-#    cudart 
-#    cublas 
-#    curand
-#)
