Adjusted max_dist for track_id and .gitignore

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,7 +68,7 @@ add_executable(darknet-debug
     src/wrapper/object.h
     #src/kalman/kalman_filter.cpp
     #src/kalman/kalman_filter.h
-    )
+    src/kalman/kalman_tracker.h)
 
 target_link_libraries(darknet-debug
     ${OpenCV_LIBS}
